# schudle_managerment

./: CMakeCache.txt  CMakeLists.txt  Employee.cpp  Employee.h  README.md  Work.cpp  Work.h  gui.cpp  gui.h  main.cpp
